--- a/index.html
+++ b/index.html
@@ -18,14 +18,8 @@
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
-      <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
-        <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
-      </div>
+      <h1>自己紹介ページ</h1>
+      <p>このページは阿部友哉の自己紹介ページです。<br>どんな人物なのか、やっていることをメインに紹介します。</p>
     </div>
   </div>
   <div class="lesson-wrapper">
@@ -37,30 +31,30 @@
         <div class="lesson">
           <div class="lesson-icon">
             <img src="https://prog-8.com/images/html/advanced/html.png">
-            <p>HTML & CSS</p>
+            <p>所属学校、学部、学年</p>
           </div>
-          <p class="text-contents">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
+          <p class="text-contents">開志専門職大学　情報学部　2年</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
             <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-            <p>jQuery</p>
+            <p>学校で取り組みたいこと、現状の目標</p>
           </div>
-          <p class="text-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
+          <p class="text-contents">プログラミング自体の理解を深める、APIの知識を増やす、HTMLをマスターする</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
             <img src="https://prog-8.com/images/html/advanced/ruby.png">
-            <p>Ruby</p>
+            <p>趣味</p>
           </div>
-          <p class="text-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
+          <p class="text-contents">ゲーム(最近ではスプラ3、ポケモンSV)、ラーメン巡り、動画・配信視聴</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
             <img src="https://prog-8.com/images/html/advanced/php.png">
-            <p>PHP</p>
+            <p>ゲームの強さ</p>
           </div>
-          <p class="text-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
+          <p class="text-contents">スプラ2:全ルールウデマエX<br>スプラ3:現在ウデマエS+11、サーモンランででんせつ999到達<br>スマブラ:学園祭で準優勝、VIP60体以上</p>
         </div>
       </div>
       <div class="clear"></div>
