--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="lesson">
           <div class="lesson-icon">
             <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-            <p>学校で取り組みたいこと、現状の目標</p>
+            <p>現状の目標</p>
           </div>
           <p class="text-contents">プログラミング自体の理解を深める、APIの知識を増やす、HTMLをマスターする</p>
         </div>
@@ -54,7 +54,7 @@
             <img src="https://prog-8.com/images/html/advanced/php.png">
             <p>ゲームの強さ</p>
           </div>
-          <p class="text-contents">スプラ2:全ルールウデマエX<br>スプラ3:現在ウデマエS+11、サーモンランででんせつ999到達<br>スマブラ:学園祭で準優勝、VIP60体以上</p>
+          <p class="text-contents">スプラ2→全ルールウデマエX<br>スプラ3→現在ウデマエS+11、<br>サーモンランでんせつ999到達<br>スマブラ:学園祭で準優勝、VIP60体以上<br>etc...</p>
         </div>
       </div>
       <div class="clear"></div>
