--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="top-wrapper">
     <div class="container">
       <h1>自己紹介ページ</h1>
-      <p>このページは阿部友哉の自己紹介ページです。<br>どんな人物なのか、やっていることをメインに紹介します。</p>
+      <p>このページは阿部友哉の自己紹介ページです。<br>四つの内容を紹介します。</p>
     </div>
   </div>
   <div class="lesson-wrapper">
