--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="lesson-wrapper">
     <div class="container">
       <div class="heading">
-        <h2>Learn Where to Get Started!</h2>
+        <h2>Let's begin introductions.</h2>
       </div>
       <div class="lessons">
         <div class="lesson">
