--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img src="https://prog-8.com/images/html/advanced/php.png">
             <p>ゲームの強さ自慢</p>
           </div>
-          <p class="text-contents">スプラ2→全ルールウデマエX<br>スプラ3→現在ウデマエS+11、<br>サーモンランでんせつ999到達<br>スマブラ:学園祭で準優勝、VIP60体以上<br>etc...</p>
+          <p class="text-contents">スプラ2→全ルールウデマエX<br>スプラ3→現在ウデマエS+11、<br>サーモンランでんせつ999到達<br>スマブラ:学園祭で準優勝、VIP60体以上<br>などなど</p>
         </div>
       </div>
       <div class="clear"></div>
