--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <footer>
     <div class="container">
       <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-      <p>Learn to Code, Learn to be Creative.</p>
+      <p>阿部友哉の自己紹介ページ</p>
     </div>
   </footer>
 </body>
